Description des modifications

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/dw9jkwccj/image/upload/v1770971614/t%C3%A9l%C3%A9chargement_7_f8jwmb.png" />
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dw9jkwccj/image/upload/v1770971614/t%C3%A9l%C3%A9chargement_7_f8jwmb.png" />
     <link rel="apple-touch-icon" href="https://res.cloudinary.com/dw9jkwccj/image/upload/v1770971614/t%C3%A9l%C3%A9chargement_7_f8jwmb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plombier & Débouchage 24/7 en Belgique | AquaDeb</title>
